<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>fr.robie.craftengineconverter</groupId>
    <artifactId>CraftEngineConverter</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <name>CraftEngineConverter</name>
    <modules>
        <module>API</module>
        <module>Common</module>
        <module>Hooks</module>
        <module>Plugin</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.release>21</maven.compiler.release>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>fr.robie.craftengineconverter</groupId>
                <artifactId>API</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>fr.robie.craftengineconverter</groupId>
                <artifactId>Common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>fr.robie.craftengineconverter</groupId>
                <artifactId>BOM</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- Paper -->
            <dependency>
                <groupId>io.papermc.paper</groupId>
                <artifactId>paper-api</artifactId>
                <version>1.21.10-R0.1-SNAPSHOT</version>
                <scope>provided</scope>
            </dependency>

            <!-- PacketEvents -->
            <dependency>
                <groupId>com.github.retrooper</groupId>
                <artifactId>packetevents-spigot</artifactId>
                <version>2.11.0</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>net.momirealms</groupId>
                <artifactId>craft-engine-core</artifactId>
                <version>0.0.66</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>net.momirealms</groupId>
                <artifactId>craft-engine-bukkit</artifactId>
                <version>0.0.66</version>
                <scope>provided</scope>
            </dependency>

            <!-- PlaceholderAPI -->
            <dependency>
                <groupId>me.clip</groupId>
                <artifactId>placeholderapi</artifactId>
                <version>2.11.7</version>
                <scope>provided</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <defaultGoal>clean package</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <artifactSet>
                        <includes>
                            <include>com.tcoded:FoliaLib</include>
                        </includes>
                    </artifactSet>
                    <relocations>
                        <relocation>
                            <pattern>com.tcoded.folialib</pattern>
                            <shadedPattern>fr.robie.craftengineconverter.lib.folialib</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>papermc-repo</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>tcoded-releases</id>
            <url>https://repo.tcoded.com/releases</url>
        </repository>

        <!-- PlaceholderAPI -->
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/releases/</url>
        </repository>

        <!-- PacketEvents -->
        <repository>
            <id>codemc-releases</id>
            <url>https://repo.codemc.io/repository/maven-releases/</url>
        </repository>

        <repository>
            <id>xiaomomi's plugins-releases</id>
            <name>XiaoMoMi's Plugin Repository</name>
            <url>https://repo.momirealms.net/releases</url>
        </repository>
    </repositories>
</project>
